# midas-lex

./: Cargo.toml  README.md
.github/workflows/: ci.yml
LICENSES/: README.md
docs/: release.md  versions.md  wrapper-design.md
release-notes/: README.md  v0.0.1-alpha.1.md  v0.0.1-beta.1.md  v0.0.1-beta.2.md  v0.0.1.md  v0.0.2-beta.1.md
src/: main.rs
