[package]
name = "midas-lex"
version = "0.0.2-beta.1"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/MidasAl/midas-lex"
description = "Launcher for Midas Lex CLI: coding agent guidance to formally verify Rust software"
readme = "README.md"
include = [
    "Cargo.lock",
    "Cargo.toml",
    "LICENSES/**",
    "README.md",
    "docs/**",
    "release-notes/**",
    "src/**",
]

[dependencies]
env_logger = "0.11"
log = "0.4"
semver = "1.0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
toml = "0.9"
ureq = "3.3.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[dev-dependencies]
tempfile = "3.27.0"
